--- a/snake.html
+++ b/snake.html
@@ -27,8 +27,8 @@
             </div>
         </div>
     </div>
-    <!-- <h1 id="instructions">Press Spacebar To Start The Game</h1>
-    <img id="logo" src="snake-image.png" alt="snake-logo" /> -->
+    <h1 id="instructions">Press Spacebar To Start The Game</h1>
+    <img id="logo" src="snake-image.png" alt="snake-logo" />
     <script src="snake.js"></script>
 </body>
 
