Add localStorage support for saving high score

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <h1 id="instructions">Press Spacebar To Start The Game</h1>
-    <img id="logo" src="snake-image.png" alt="snake-logo" />
+    <img id="logo" src="images/snake-image.png" alt="snake-logo" />
     <script src="snake.js"></script>
 </body>
 
